# Robotics-Classifier

./: README.md
computer_vision/: CMakeLists.txt  package.xml
computer_vision/launch/: computer_vision.launch  hardware.launch  video.launch  video2.launch
computer_vision/src/: .#obj_det.cpp  computer_vision.cpp
computer_vision/srv/: CheckMap.srv
object_classifier/: CMakeLists.txt  package.xml
object_classifier/config/: object_classifier (backup1).yaml  object_classifier.yaml
object_classifier/graph/: output_labels.txt
object_classifier/launch/: object_classifier.launch
object_classifier/scripts/: classifier.py
object_classifier/srv/: ClassifyObject.srv
object_detection/: CMakeLists.txt  package.xml
object_detection/config/: object_detection.yaml
object_detection/launch/: object_detection.launch
object_detection/msg/: ObjectDetected.msg
object_detection/src/: obj_det.cpp
