<?xml version="1.0"?>
<package>
  <name>computer_vision</name>
  <version>0.0.0</version>
  <description>The object_detection package</description>

  <license>BSD</license>
  <maintainer email="someone@gmail.com">Alvin Lee</maintainer>

 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ras_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>ras_msgs</run_depend>
  <run_depend>message_generation</run_depend> 
  <run_depend>message_runtime</run_depend> 
</package>
