<package>
  <name>object_classifier</name>
  <version>1.2.4</version>
  <description>CNN network for the image classifier(Group 2)</description>

  <maintainer email="someone@gmail.com">Alvin Lee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>  

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
